--- a/docs/Makalah.tex
+++ b/docs/Makalah.tex
@@ -120,6 +120,8 @@ Setiap blok baru yang dibuat haruslah ditransmisikan ke seluruh pemirsa yang ber
 \subsubsection{Blok yang akan ditambahkan haruslah berasal dari rantai yang valid}
 Disini rantai yang valid didefinisikan rantai yang tersusun atas blok-blok yang valid. Keabsahan dari rantai dapat dilihat dari rantai terakhir pada sebuah blok. Apabila hash terakhir tertera pada blok yang akan ditambahkan dan blok yang akan ditambahkan sah, rantai tersebut bisa jadi valid. Untuk pemeriksaan terakhir, perlu dilakukan sampling dari node lain apakah rantai yang dimiliki saat ini valid. Hal ini dapat dilakukan pemeriksaan juga menggunakan blok  terakhir. Bila terjadi perbedaan, dapat dilakukan perubahan sesuai dengan rantai yang benar yang berasal dari node lain.
 
+\subsection{Pembangkit Bilangan Acak}
+Pembangkit bilangan acak merupakan salah satu alat penting dalam kriptografi. Pembangkit bilangan acak ini akan dibutuhkan dalam beberapa algorithma kriptografi.
 
 
 \section{Kesimpulan}
