Mengubah sedikit ucapan terima kasih

--- a/docs/Makalah.tex
+++ b/docs/Makalah.tex
@@ -175,9 +175,9 @@ Algoritma \emph{Blum-Blum-Shub} (BBS) merupakan salah satu algoritma pembangkit 
 \subsection{SHA-3 (Keccak)}
 SHA-3 meupakan algortma fungsi hash satu arah yang dibuat oleh Guido Breton, Joan Daemen, dan Michaël Peeters. Algoritma ini menggantikan algoritma MD5 dan SHA-1 yang telah ditemukan kolisinya sehingga sudah tidak aman lagi.
 
-Fungsi hash merupakan fungsi yang menerima masukan string dengan panjang sembarang dan menghasilkan hash yang memiliki panjang tetap. Fungsi hash satu arah berarti pesan yang telah melakukan kompresi menjadi nilai hash tidak bisa dipulihkan kembali menjadi nilai aslinya. \cite{b1}
+Menurut \cite{b1},  Fungsi hash merupakan fungsi yang menerima masukan string dengan panjang sembarang dan menghasilkan hash yang memiliki panjang tetap. Fungsi hash satu arah berarti pesan yang telah melakukan kompresi menjadi nilai hash tidak bisa dipulihkan kembali menjadi nilai aslinya.
 
-Dalam algoritma SHA-3 dikenal sebuah istilah spons. Spons merupakan state yang diinisialisasi dengan nilai 0. Pada algoritma ini dikenal beberapa fase, yaitu sebagai berikut: \cite{b1}
+Berdasarkan \cite{b1}, Dalam algoritma SHA-3 dikenal sebuah istilah spons. Spons merupakan state yang diinisialisasi dengan nilai 0. Pada algoritma ini dikenal beberapa fase, yaitu sebagai berikut: 
 
 \begin{enumerate}
     \item Fase Persiapan \\
@@ -445,9 +445,11 @@ Dengan keterhubungan tersebut, dapat digunakan algoritma yang telah dipaparkan s
 Pemanfaatan algoritma ini dapat digunakan oleh tim forensik untuk mengaudit sebuah blockchain panjang. Pengauditan ini dapat dipakai untuk memeriksa manakah penyebab blockchain berbeda dan menganalisis informasi pesan yang terkandung dalam blockchain tersebut. 
 
 \section*{Ucapan Terima Kasih}
-Alhamdulillah, segala puji Allah SWT karena atas pertolongan dan rahmatnya, saya dapat menyelesaikan makalah ini. Penulis juga turut memberikan ucapan terima kasih kepada keluarga yang selalu setia untuk
+Alhamdulillah, segala puji Allah SWT karena atas pertolongan, rahmat, serta hidayahnya, saya dapat menyelesaikan makalah ini. Sholawat serta salam semoga selalu tercurahkan kepada Nabi Muhammad SAW yang telah memberikan jalan lurus menuju kebenaran. 
+
+Penulis memberikan ucapan terima kasih kepada keluarga yang selalu setia untuk
 memberikan motivasi dan semangat untuk dapat menyelesaikan makalah ini. Penulis juga turut mengucapkan terima kasih kepada para dosen pengampu mata kuliah Matematika Diskrit, yaitu ibu Dr. Nur Ulfa Maulidevi, S.T., M.Sc., bapak Dr. Ir.
-Rinaldi Munir, M.T., dan ibu Dr. Masayu Leylia Khodra. atas segala ilmunya yang telah membantu penulis dalam menyelesaikan makalah ini. Semoga dengan kebaikan yang telah diberikan, Allah akan menggantinya dengan yang lebih baik lagi.
+Rinaldi Munir, M.T., dan ibu Dr. Masayu Leylia Khodra. atas segala ilmunya yang telah membantu penulis dalam menyelesaikan makalah ini. Penulis juga turut berterima kasih kepada sahabat saya, Hana Fathiyah, yang selalu setia menemani dalam berbagai keadaan. Semoga dengan kebaikan yang telah diberikan, Allah akan menggantinya dengan yang lebih baik lagi.
 
 \section*{Sumber Daya}
 Segala sumber daya yang digunakan untuk membangun makalah ini dapat anda akses pada \url{https://github.com/bayusamudra5502/stima-blockchain}.
